--- a/src/sass/_base.sass
+++ b/src/sass/_base.sass
@@ -13,6 +13,7 @@ body
         padding: 0 10%
     &.noScroll
         overflow: hidden
+        height: 100vw
     & > section
         margin: 2em 0
         
